--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "npm run build && gh-pages -d out"
   },
   "dependencies": {
     "next": "15.1.7",
@@ -15,6 +16,8 @@
     "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
+    "react-dom": "^19.0.0",
+    "gh-pages": "^6.3.0",
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
