--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "dev": "next dev",
+    "build": "cross-env NODE_ENV=production next build",
     "start": "next start",
     "lint": "next lint",
     "deploy": "npm run build && gh-pages -d out"
@@ -16,15 +16,16 @@
     "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
-    "react-dom": "^19.0.0",
-    "gh-pages": "^6.3.0",
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "gh-pages": "^6.3.0",
     "postcss": "^8",
+    "react-dom": "^19.0.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
