--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scroll-parallax": "^3.4.5"
+    "react-scroll-parallax": "^3.4.5",
+    "tailwindcss": "^3.4.1",
+    "postcss": "^8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -22,10 +24,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "gh-pages": "^6.3.0",
-    "postcss": "^8",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
