--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "deploy": "npm run build && gh-pages -d out"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.20",
     "next": "15.1.7",
+    "postcss": "^8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scroll-parallax": "^3.4.5",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
