--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
     "deploy": "npm run build && gh-pages -d out"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.20",
     "next": "15.1.7",
-    "postcss": "^8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scroll-parallax": "^3.4.5",
-    "tailwindcss": "^3.4.1"
+    "react-scroll-parallax": "^3.4.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -26,6 +23,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "react-dom": "^19.0.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
