--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "npm run build && gh-pages -d out"
   },
   "dependencies": {
+    "lottie-react": "^2.4.1",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -20,12 +21,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
-    "react-dom": "^19.0.0",
-    "typescript": "^5",
-    "autoprefixer": "^10.4.20",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
